@@ -1,5 +1,11 @@
 1998-12-14  Mike Grupenhoff <kashmir@munge.com>
 
+	* common-src/error.c (error): const the format arg
+	* common-src/amanda.h: mark error with gcc's noreturn attribute, and
+	const its format arg
+
+1998-12-14  Mike Grupenhoff <kashmir@munge.com>
+
 	* common-src/debug.c (debug_printf): const the format arg
 	* common-src/amanda.h: const debug_printf's format arg
 
